# yabaipy

./: .gitignore  :wa  README.md  cli.py  pyproject.toml  setup.cfg  test.py
yabaipy/: __init__.py  additional.py  classes.py  decorators.py  displays.py  main.py  minimal.py  shared.py  space_order.py  spaces.py  spaces.py.bak  windows.py
yabpy/: __init__.py  additional.py  cli.py  displays.py  shared.py  spacedef.py  spaces.json  spaces.py  windows.py
