[tool.poetry]
name = "yabpy"
version = "0.2.0"
description = ""
authors = ["rwijtvliet <rwijtvliet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
