[tool.poetry]
name = "yabpy"
version = "0.3.1"
description = ""
authors = ["rwijtvliet <rwijtvliet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yabpy = "yabpy.cli:main"
